


=== 16 de setembro de 2024



==== Correções de bugs

Atualizamos o serviço de cópia e sincronização do BlueXP  e o corretor de dados para corrigir alguns bugs. A nova versão do Data Broker é 1,0.55.



== Consultor digital



=== 06 de agosto de 2025



==== Suporte a interruptores autorizados

ef3139c75debdd9ee259a4ea386083d3



==== Limite para dados de AutoSupport RSS

O limite de Envios Interrompidos Recentemente (RSS), no widget AutoSupport , foi estendido de 48 horas (2 dias) para 216 horas (9 dias) antes que um sistema seja sinalizado como RSS. Isso é feito para acomodar plataformas como o StorageGRID , que enviam apenas dados semanais do AutoSupport .



==== Seção de API obsoleta no catálogo de API do Digital Advisor

Uma nova seção de API obsoleta está disponível no catálogo de API do Digital Advisor . Ele lista as APIs que estão programadas para descontinuação, juntamente com cronogramas de descontinuação e APIs alternativas.



==== Previsão de capacidade V2 e descontinuação dos módulos da API End of Support

Os módulos de previsão de capacidade V2 e API de fim de suporte estão programados para descontinuação. Para acessar as APIs obsoletas ou saber sobre os cronogramas de obsolescência e APIs alternativas, navegue até *Serviços de API -> Procurar -> APIs obsoletas*.



=== 09 de julho de 2025



==== Consultor de atualização

* Uma opção de download multiformato foi incluída nos planos do Upgrade Advisor para simplificar o planejamento de atualizações do ONTAP e solucionar possíveis bloqueios ou avisos. Agora você pode baixar os planos do Upgrade Advisor nos formatos Excel, PDF e JSON.
* No formato Excel do plano Upgrade Advisor, as seguintes melhorias foram feitas:
+
** Você pode visualizar as pré-verificações realizadas no cluster, sinalizando os resultados com indicadores como "Aprovado", "Falha" ou "Ignorado". Isso garante que o cluster esteja em condições ideais para concluir a atualização do ONTAP .